@@ -156,6 +156,8 @@
                 -javaagent:${user.home}/.m2/repository/org/jacoco/org.jacoco.agent/0.8.6/org.jacoco.agent-0.8.6-runtime.jar=destfile=target/jacoco.exec
                 --add-opens=com.spme.fantasolver/unit.dao=ALL-UNNAMED
                 --add-opens=com.spme.fantasolver/unit.controllers=ALL-UNNAMED
+                --add-opens=com.spme.fantasolver/unit.utility=ALL-UNNAMED
+                --add-opens=com.spme.fantasolver/unit.entity=ALL-UNNAMED
               </argLine>
             </configuration>
             <executions>
